--- a/RAT/RAT/Base.lproj/Main.storyboard
+++ b/RAT/RAT/Base.lproj/Main.storyboard
@@ -57,7 +57,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9eW-wM-K35" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4596" y="2630"/>
+            <point key="canvasLocation" x="4777" y="2701"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="AiA-hh-wNm">
@@ -544,20 +544,35 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DQj-58-Vmb">
-                                <rect key="frame" x="16" y="88" width="343" height="180"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Rectangle 4" translatesAutoresizingMaskIntoConstraints="NO" id="DQj-58-Vmb">
+                                <rect key="frame" x="16" y="40" width="123" height="112"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ReN-yN-8qX">
-                                <rect key="frame" x="16" y="287" width="343" height="101"/>
+                                <rect key="frame" x="16" y="160" width="343" height="101"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XBM-Wm-N2G">
+                                <rect key="frame" x="214" y="269" width="145" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Построить маршрут"/>
+                                <connections>
+                                    <segue destination="bgk-bw-ljs" kind="show" id="UL0-DI-EnM"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zqx-ig-f7u">
+                                <rect key="frame" x="166" y="86" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="119" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="eYL-Wk-Bll">
-                                <rect key="frame" x="0.0" y="423" width="375" height="244"/>
+                                <rect key="frame" x="0.0" y="307" width="375" height="310"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -592,14 +607,6 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XBM-Wm-N2G">
-                                <rect key="frame" x="214" y="396" width="145" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Построить маршрут"/>
-                                <connections>
-                                    <segue destination="bgk-bw-ljs" kind="show" id="UL0-DI-EnM"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -608,16 +615,17 @@
                         <outlet property="listOfReviewsTable" destination="eYL-Wk-Bll" id="wuI-oL-zHD"/>
                         <outlet property="serviceDescription" destination="ReN-yN-8qX" id="59K-pM-bxA"/>
                         <outlet property="serviceImage" destination="DQj-58-Vmb" id="0RP-AZ-x0P"/>
+                        <outlet property="serviceName" destination="zqx-ig-f7u" id="YSE-Ef-NmV"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ODL-qt-syK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4556" y="1883"/>
+            <point key="canvasLocation" x="4776.8000000000002" y="1895.8020989505249"/>
         </scene>
-        <!--View Controller-->
+        <!--Confirm View Controller-->
         <scene sceneID="hjw-Ts-5Vh">
             <objects>
-                <viewController id="X6y-BU-D8C" sceneMemberID="viewController">
+                <viewController id="X6y-BU-D8C" customClass="ConfirmViewController" customModule="RAT" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="wiA-MN-QmO"/>
                         <viewControllerLayoutGuide type="bottom" id="d6X-8x-sY6"/>
@@ -627,51 +635,43 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wVH-VK-ULP">
-                                <rect key="frame" x="135" y="115" width="42" height="21"/>
+                                <rect key="frame" x="16" y="72" width="343" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zeO-l4-xXq">
-                                <rect key="frame" x="143" y="153" width="42" height="21"/>
+                                <rect key="frame" x="16" y="101" width="343" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H7d-ed-xKR">
-                                <rect key="frame" x="135" y="197" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6O1-Qe-VTf">
-                                <rect key="frame" x="135" y="233" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u2u-H1-0AK">
-                                <rect key="frame" x="143" y="270" width="42" height="21"/>
+                                <rect key="frame" x="16" y="130" width="343" height="429"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1ti-D7-6Gt">
-                                <rect key="frame" x="117" y="299" width="141" height="30"/>
+                                <rect key="frame" x="117" y="567" width="141" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Pseudo Confirm"/>
+                                <state key="normal" title="Confirm"/>
                                 <connections>
-                                    <segue destination="Qzt-sB-GhT" kind="presentation" id="tyT-p0-Q4I"/>
+                                    <action selector="confirmButtonAction:" destination="X6y-BU-D8C" eventType="touchUpInside" id="oF3-QA-njC"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="messageLabel" destination="H7d-ed-xKR" id="BT2-3p-QvI"/>
+                        <outlet property="priceLabel" destination="zeO-l4-xXq" id="iDf-76-CuG"/>
+                        <outlet property="serviceLabel" destination="wVH-VK-ULP" id="VEh-30-FGX"/>
+                        <segue destination="Qzt-sB-GhT" kind="presentation" identifier="FromConfirmToOfferList" id="fGL-vM-yVh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="u64-xU-pd2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -680,7 +680,7 @@
         <!--Chat controller-->
         <scene sceneID="zD1-3L-Oeb">
             <objects>
-                <viewController title="Chat controller" id="rNs-ya-138" sceneMemberID="viewController">
+                <viewController title="Chat controller" id="rNs-ya-138" customClass="ChatViewController" customModule="RAT" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Kmv-43-Qth"/>
                         <viewControllerLayoutGuide type="bottom" id="LB2-dg-uHU"/>
@@ -721,7 +721,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="View Service Info"/>
                                 <connections>
-                                    <segue destination="UQq-df-NR2" kind="show" id="GBh-bh-lqX"/>
+                                    <action selector="viewServiceInfoButtonAction:" destination="rNs-ya-138" eventType="touchUpInside" id="lw8-kY-XxA"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PWQ-Ea-yrn">
@@ -729,7 +729,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="View Offer"/>
                                 <connections>
-                                    <segue destination="X6y-BU-D8C" kind="show" id="iLI-wc-sCB"/>
+                                    <action selector="veiwConfirmButtonAction:" destination="rNs-ya-138" eventType="touchUpInside" id="vlb-WQ-Tiy"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -737,6 +737,10 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="0Hj-PD-4np"/>
                     <navigationItem key="navigationItem" id="d4b-Y2-2s7"/>
+                    <connections>
+                        <segue destination="X6y-BU-D8C" kind="show" identifier="ToConfirm" id="5t1-DR-a7C"/>
+                        <segue destination="UQq-df-NR2" kind="show" identifier="ToServiceInfo" id="2Ff-Ph-FZU"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2MK-CD-kLO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -1444,7 +1448,7 @@
     <inferredMetricsTieBreakers>
         <segue reference="R2C-Xh-Jli"/>
         <segue reference="lB6-vH-CvY"/>
-        <segue reference="Jai-ou-tHe"/>
         <segue reference="sNC-gj-PZA"/>
+        <segue reference="fGL-vM-yVh"/>
     </inferredMetricsTieBreakers>
 </document>
